--- a/app/assets/stylesheets/minimal.css
+++ b/app/assets/stylesheets/minimal.css
@@ -14,6 +14,7 @@
     margin-top: 10px;
 }
 
+
 .btn-custom,
 .input-group-addon-custom {
     background-color: #F4A024;
@@ -82,6 +83,10 @@
     font-size: 1.2em !important;
 }
 
+.jumbotron {
+    padding: 40px !important;
+}
+
 .jumbotron .content p {
     font-size: 16px;
 }
@@ -126,4 +131,10 @@
         -webkit-transform: scale(1.0);
         transform: scale(1.0);
     }
+}
+
+.logo {
+    width: 200px;
+    margin-top: 80px;
+    float: none;
 }
