--- a/app/assets/stylesheets/minimal.css
+++ b/app/assets/stylesheets/minimal.css
@@ -155,3 +155,9 @@
     margin-top: 5px;
     margin-left: 5px;
 }
+
+.panel-head-content {
+    font-size: 14px;
+    margin-left: 20px;
+    margin-top: 20px;
+}
